syntax = "proto3";

package juno.project;

import "identifiers.proto";

service ProjectService {
  rpc getProject(identifiers.ProjectIdentifier) returns (Project);
  rpc createProject(CreateProjectRequest) returns (Project);
  rpc updateProject(UpdateProjectRequest) returns (Project);
  rpc deleteProject(identifiers.ProjectIdentifier) returns (Project);
  rpc linkUser(LinkUserToProjectRequest) returns (Project);
}

message Project {
  int64 id = 1;
  string name = 2;
}

message CreateProjectRequest { string name = 1; }

message ProjectUpdateParams { optional string name = 2; }

message LinkUserToProjectRequest {
  identifiers.ProjectIdentifier project = 1;
  identifiers.UserIdentifier user = 2;
}

message UpdateProjectRequest {
  identifiers.ProjectIdentifier projectIdentifier = 1;
  ProjectUpdateParams updateParams = 2;
}
